[package]
name = "harmonia"
version = "0.1.0"
edition = "2024"
description = "Instrument-agnostic music theory primitives: pitch classes, intervals, scales, chords, keys, and progressions."
license = "MIT"
repository = "https://github.com/sogh/harmonia"
readme = "README.md"
keywords = ["music", "theory", "harmony", "scales", "chords"]
categories = ["multimedia::audio"]

[dependencies]
