[package]
name = "harmonia"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Instrument-agnostic music theory primitives: pitch classes, intervals, scales, chords, keys, and progressions."
license = "MIT"
repository = "https://github.com/sogh/harmonia"
readme = "README.md"
keywords = ["music", "theory", "harmony", "scales", "chords"]
categories = ["multimedia::audio"]

[features]
# Off by default; enable with `harmonia = { version = "...", features = ["serde"] }`
# to derive Serialize/Deserialize on every public data type.
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1"
